--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 	<head>
 		<meta charset="utf-8"/>
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
-		<script src="/wasm/wasm_exec.js"></script>
+		<script src="/vecty-demo/wasm_exec.js"></script>
 		<script>
 			const go = new Go();
-			WebAssembly.instantiateStreaming(fetch("/vecty/main.wasm"), go.importObject).then((result) => {
+			WebAssembly.instantiateStreaming(fetch("/vecty-demo/main.wasm"), go.importObject).then((result) => {
 				go.run(result.instance);
 			});
 		</script>
